added SecurityHelperTest